--- a/html/Htmlpr.html
+++ b/html/Htmlpr.html
@@ -264,7 +264,7 @@
         <div class="carousel-cell">
           <div class="carousel-card">
             <a href="hocvienanhhung.html"
-              ><img src="https://bom.so/izUdyS" height="5%" width="100%"
+              ><img src="https://bom.so/GMhVmn" height="5%" width="100%"
             /></a>
             <!-- <div class="card-description">
                 <h3>Học Viện Anh Hùng</h3>
@@ -274,7 +274,7 @@
         <div class="carousel-cell">
           <div class="carousel-card">
             <a href="#"
-              ><img src="https://bom.so/QSjcBg" height="5%" width="100%"
+              ><img src="https://bom.so/GMhVmn" height="5%" width="100%"
             /></a>
             <!-- <div class="card-description">
                 <h3>Doremon</h3>
@@ -284,7 +284,7 @@
         <div class="carousel-cell">
           <div class="carousel-card">
             <a href="#"
-              ><img src="https://bom.so/ajKhGy" height="5%" width="100%"
+              ><img src="https://bom.so/GMhVmn" height="5%" width="100%"
             /></a>
             <!-- <div class="card-description">
                 <h3>Bách Luyện Thành Thần</h3>
@@ -294,7 +294,7 @@
         <div class="carousel-cell">
           <div class="carousel-card">
             <a href="#"
-              ><img src="https://bom.so/tFsM4D" height="5%" width="100%"
+              ><img src="https://bom.so/GMhVmn" height="5%" width="100%"
             /></a>
             <!-- <div class="card-description">
                 <h3>Trọng Sinh Đô Thị Tu Tiên</h3>
@@ -420,556 +420,7 @@
           >Fate/Grand Order - Turas Realta</a
         >
       </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/tho-san-gacha-cap-sss_1633319578.jpg?gf=hdfgdfg&mobile=2"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Thợ Săn Gacha Cấp Sss" href="#" class="TenTruyen"
-          >Thợ Săn Gacha Cấp Sss</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/hoa-than-thanh-ca_1653793058.jpg?gf=hdfgdfg&mobile=2"
-            alt="Hoá Thân Thành Cá"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title=" Hoá Thân Thành Cá" href="#" class="TenTruyen"
-          >Hoá Thân Thành Cá</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/nhung-ranker-cap-s-ma-toi-nuoi-duong_1637125229.jpg?gf=hdfgdfg&mobile=2"
-            alt="Otonari No Tenshi-Sama Ni Itsunomanika Dame Ningen Ni Sareteita Ken"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Những Ranker Cấp S Mà Tôi Nuôi Dưỡng"
-          href="#"
-          class="TenTruyen"
-          >Những Ranker Cấp S Mà Tôi Nuôi Dưỡng</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/my-home-hero_1572599835.jpg?gf=hdfgdfg&mobile=2"
-            alt="My Home Hero"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="My Home Hero" href="#" class="TenTruyen">My Home Hero</a>
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ore-no-ie-ga-maryoku-spot-datta-ken-sundeiru-dake-de-sekai-saikyou_1527780142.jpg?gf=hdfgdfg&mobile=2"
-            alt="Ore No Ie Ga Maryoku Spot Datta Ken: Sundeiru Dake De Sekai Saikyou"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Ore No Ie Ga Maryoku Spot Datta Ken: Sundeiru Dake De Sekai Saikyou"
-          href="#"
-          class="TenTruyen"
-          >Ore No Ie Ga Maryoku Spot Datta Ken: Sundeiru Dake De Sekai
-          Saikyou</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/co-that-day-la-anh-hung-khong_1645405141.jpg?gf=hdfgdfg&mobile=2"
-            alt="Có Thật Đây Là Anh Hùng Không?"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Có Thật Đây Là Anh Hùng Không?" href="#" class="TenTruyen"
-          >Có Thật Đây Là Anh Hùng Không?</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/sieu-may-man_1653714557.jpg?gf=hdfgdfg&mobile=2"
-            alt="Siêu May Mắn"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Siêu May Mắn" href="#" class="TenTruyen">Siêu May Mắn</a>
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/tien-vo-de-ton_1574509924.jpg?gf=hdfgdfg&mobile=2"
-            alt="Tiên Võ Đế Tôn"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Tiên Võ Đế Tôn" href="#" class="TenTruyen">Tiên Võ Đế Tôn</a>
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/tu-tien-tro-ve-tai-vuon-truong_1568868652.jpg?gf=hdfgdfg&mobile=2"
-            alt="Tu Tiên Trở Về Tại Vườn Trường"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Tu Tiên Trở Về Tại Vườn Trường" href="#" class="TenTruyen"
-          >Tu Tiên Trở Về Tại Vườn Trường</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/vo-cong-tu-dong-tu-luyen-ta-o-ma-giao-tu-thanh-phat-hoang_1658243421.jpg?gf=hdfgdfg&mobile=2"
-            alt="Võ Công Tự Động Tu Luyện: Ta Ở Ma Giáo Tu Thành Phật Hoàng"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Võ Công Tự Động Tu Luyện: Ta Ở Ma Giáo Tu Thành Phật Hoàng"
-          href="#"
-          class="TenTruyen"
-          >Võ Công Tự Động Tu Luyện: Ta Ở Ma Giáo Tu Thành Phật Hoàng</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/nghich-thien-kiem-than_1554042567.jpg?gf=hdfgdfg&mobile=2"
-            alt="Nghịch Thiên Kiếm Thần"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Nghịch Thiên Kiếm Thần" href="#" class="TenTruyen"
-          >Nghịch Thiên Kiếm Thần</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/tensei-kenja-no-isekai-raifu-daini-no-shokugyo-wo-ete-sekai-saikyou-ni-narimashita_1538901670.jpg?gf=hdfgdfg&mobile=2"
-            alt="Tensei Kenja No Isekai Raifu ~ Daini No Shokugyo Wo Ete, Sekai Saikyou Ni Narimashita~"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Tensei Kenja No Isekai Raifu ~ Daini No Shokugyo Wo Ete, Sekai Saikyou Ni Narimashita~"
-          href="#"
-          class="TenTruyen"
-          >Tensei Kenja No Isekai Raifu ~ Daini No Shokugyo Wo Ete, Sekai
-          Saikyou Ni Narimashita~</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ngu-linh-the-gioi_1473657852.jpg?gf=hdfgdfg&mobile=2"
-            alt="Ngự Linh Thế Giới"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Ngự Linh Thế Giới" href="#" class="TenTruyen"
-          >Ngự Linh Thế Giới</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/chung-cuc-dau-la_1550935336.jpg?gf=hdfgdfg&mobile=2"
-            alt="
-                    Chung Cực Đấu La"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="
-            Chung Cực Đấu La"
-          href="#"
-          class="TenTruyen"
-        >
-          Chung Cực Đấu La</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ngu-linh-gia_1662465984.jpg?gf=hdfgdfg&mobile=2"
-            alt="
-                    Ngự Linh Giả"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="
-            Ngự Linh Giả"
-          href="#"
-          class="TenTruyen"
-        >
-          Ngự Linh Giả</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/huyen-thien-chi-ton_1661695011.jpg?gf=hdfgdfg&mobile=2"
-            alt="Huyền Thiên Chí Tôn"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Huyền Thiên Chí Tôn" href="#" class="TenTruyen"
-          >Huyền Thiên Chí Tôn</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/yancha-gal-no-anjou-san-series_1548204165.jpg?gf=hdfgdfg&mobile=2"
-            alt="Yancha Gal No Anjou-San Series
-                    "
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Yancha Gal No Anjou-San Series
-            "
-          href="#"
-          class="TenTruyen"
-          >Yancha Gal No Anjou-San Series
-        </a>
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/chuyen-sinh-thanh-that-hoang-tu_1622107423.jpg?gf=hdfgdfg&mobile=2"
-            alt="Chuyển Sinh Thành Thất Hoàng Tử"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Chuyển Sinh Thành Thất Hoàng Tử" href="#" class="TenTruyen"
-          >Chuyển Sinh Thành Thất Hoàng Tử</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/huong-dan-lam-nhiem-vu-cua-nu-diem-la_1659595273.jpg?gf=hdfgdfg&mobile=2"
-            alt="Hướng Dẫn Làm Nhiệm Vụ Của Nữ Diêm La"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Hướng Dẫn Làm Nhiệm Vụ Của Nữ Diêm La"
-          href="#"
-          class="TenTruyen"
-          >Hướng Dẫn Làm Nhiệm Vụ Của Nữ Diêm La</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/toi-cuong-phan-phai-he-thong_1566533461.jpg?gf=hdfgdfg&mobile=2"
-            alt="Tối Cường Phản Phái Hệ Thống"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Tối Cường Phản Phái Hệ Thống" href="#" class="TenTruyen"
-          >Tối Cường Phản Phái Hệ Thống</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/kenja-no-mago_1490451806.jpg?gf=hdfgdfg&mobile=2"
-            alt="Cháu Trai Của Hiền Nhân"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Cháu Trai Của Hiền Nhân" href="#" class="TenTruyen"
-          >Cháu Trai Của Hiền Nhân</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/roi-vao-cam-bay-ngot-ngao-cua-tu-thuc_1661006859.jpg?gf=hdfgdfg&mobile=2"
-            alt="Rơi Vào Cạm Bẫy Ngọt Ngào Của Tứ Thúc"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Rơi Vào Cạm Bẫy Ngọt Ngào Của Tứ Thúc"
-          href="#"
-          class="TenTruyen"
-          >Rơi Vào Cạm Bẫy Ngọt Ngào Của Tứ Thúc</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ta-la-nguoi-thu-thue_1660125308.jpg?gf=hdfgdfg&mobile=2"
-            alt="Ta Là Người Thu Thuế"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Ta Là Người Thu Thuế" href="#" class="TenTruyen"
-          >Ta Là Người Thu Thuế</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/toi-tro-thanh-tho-san-rank-s-bang-he-thong-quy-vuong_1660487848.jpg?gf=hdfgdfg&mobile=2"
-            alt="Tôi Trở Thành Thợ Săn Rank S Bằng Hệ Thống Quỷ Vương"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Tôi Trở Thành Thợ Săn Rank S Bằng Hệ Thống Quỷ Vương"
-          href="#"
-          class="TenTruyen"
-          >Tôi Trở Thành Thợ Săn Rank S Bằng Hệ Thống Quỷ Vương</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/van-tuong-chi-vuong_1628657017.jpg?gf=hdfgdfg&mobile=2"
-            alt="Vạn Tướng Chi Vương"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Vạn Tướng Chi Vương" href="#" class="TenTruyen"
-          >Vạn Tướng Chi Vương</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/gate-jietai-kare-no-chi-nite-kaku-tatakeri_1552463253.jpg?gf=hdfgdfg&mobile=2"
-            alt="Gate - Jietai Kare No Chi Nite, Kaku Tatakeri"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Gate - Jietai Kare No Chi Nite, Kaku Tatakeri"
-          href="#"
-          class="TenTruyen"
-          >Gate - Jietai Kare No Chi Nite, Kaku Tatakeri</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ki-nguyen-cua-anh-hung_1588570362.jpg?gf=hdfgdfg&mobile=2"
-            alt="
-                    Kĩ Nguyên Của Anh Hùng"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="
-            Kĩ Nguyên Của Anh Hùng"
-          href="#"
-          class="TenTruyen"
-        >
-          Kĩ Nguyên Của Anh Hùng</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ac-ma-thi-tham_1625489438.jpg?gf=hdfgdfg&mobile=2"
-            alt="Ác Ma Thì Thầm"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Ác Ma Thì Thầm" href="#" class="TenTruyen">OÁc Ma Thì Thầm</a>
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/dai-chu-tien-lai_1633681066.jpg?gf=hdfgdfg&mobile=2"
-            alt="Đại Chu Tiên Lại"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Đại Chu Tiên Lại" href="#" class="TenTruyen"
-          >Đại Chu Tiên Lại</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/yofukashi-no-uta_1569073800.jpg?gf=hdfgdfg&mobile=2"
-            alt="Bản Nhạc Của Kẻ Đi Dạo Đêm"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Bản Nhạc Của Kẻ Đi Dạo Đêm" href="#" class="TenTruyen"
-          >Bản Nhạc Của Kẻ Đi Dạo Đêm</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="
-                https://i.truyenvua.xyz/ebook/190x247/ta-chinh-la-khong-theo-sao-lo-ra-bai_1634198413.jpg?gf=hdfgdfg&mobile=2"
-            alt=" Ta Chính Là Không Theo Sáo Lộ Ra Bài"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="
-            Ta Chính Là Không Theo Sáo Lộ Ra Bài"
-          href="#"
-          class="TenTruyen"
-        >
-          Ta Chính Là Không Theo Sáo Lộ Ra Bài</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/murim-thoi-hien-dai_1611198801.jpg?gf=hdfgdfg&mobile=2"
-            alt="
-                    Murim Thời Hiện Đại"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="
-            Murim Thời Hiện Đại"
-          href="#"
-          class="TenTruyen"
-        >
-          Murim Thời Hiện Đại</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/truoc-khi-vo-dich-ta-no-tinh-qua-nhieu_1665745010.jpg?gf=hdfgdfg&mobile=2"
-            alt="Trước Khi Vô Địch Ta Nợ Tình Quá Nhiều"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a
-          title="Trước Khi Vô Địch Ta Nợ Tình Quá Nhiều"
-          href="#"
-          class="TenTruyen"
-          >Trước Khi Vô Địch Ta Nợ Tình Quá Nhiều</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ke-rac-ruoi-khong-dang-duoc-yeu_1657001514.jpg?gf=hdfgdfg&mobile=2"
-            alt="Kẻ Rác Rưởi Không Đáng Được Yêu"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Kẻ Rác Rưởi Không Đáng Được Yêu" href="#" class="TenTruyen"
-          >Kẻ Rác Rưởi Không Đáng Được Yêu</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/trong-sinh-sau-tam-van-nam_1569846225.jpg?gf=hdfgdfg&mobile=2"
-            alt="Trọng Sinh Sau Tám Vạn Năm"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Trọng Sinh Sau Tám Vạn Năm" href="#" class="TenTruyen"
-          >Trọng Sinh Sau Tám Vạn Năm</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/nha-hien-triet-yigret_1636605916.jpg?gf=hdfgdfg&mobile=2"
-            alt="Nhà Hiền Triết Yigret"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Nhà Hiền Triết Yigret" href="#" class="TenTruyen"
-          >Nhà Hiền Triết Yigret</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/vo-luyen-dinh-phong_1514903369.jpg?gf=hdfgdfg&mobile=2"
-            alt="Võ Luyện Đỉnh Phong"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Võ Luyện Đỉnh Phong" href="#" class="TenTruyen"
-          >Võ Luyện Đỉnh Phong</a
-        >
-      </div>
-      <div class="ContentNew1">
-        <a href="#">
-          <img
-            src="https://i.truyenvua.xyz/ebook/190x247/ta-khong-phai-con-cung-cua-khi-van_1639137202.jpg?gf=hdfgdfg&mobile=2"
-            alt="Ta Không Phải Con Cưng Của Khí Vận"
-            class="Truyen"
-          />
-        </a>
-        <br />
-        <a title="Ta Không Phải Con Cưng Của Khí Vận" href="#" class="TenTruyen"
-          >Ta Không Phải Con Cưng Của Khí Vận</a
-        >
-      </div>
-    </div>
+      
 
     <div class="ContentMore">
       <a href="Xemthemnhieutruyen.html" class="ContentMorebtn"
