--- a/html/login.html
+++ b/html/login.html
@@ -1,58 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form login </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="../css/login.css">
-</head>
-
-<body>
-
-    <div id="wrapper">
-
-        <form action="" id="form-login">
-
-            <h1 class="form-heading">Đăng Nhập </h1>
-            <div class="form-group">
-                <i class="far fa-user"></i>
-                <input type="text"  class="form-input" placeholder="Tên đăng nhập">
-            </div>
-            <div class="form-group">
-                <i class="fas fa-key"></i>
-                <input type="password"  class="form-input" placeholder="Mật khẩu">
-                <div id="eye">
-                    <i class="far fa-eye"></i>
-                </div>
-            </div>
-            <div class="form-register">
-                <button type="submit" name="form-submit" class="form-submit" onclick=" show()"> Đăng nhập </button>
-                <button type="submit" name="form-submit" class="form-submit"><a href="register.html">Đăng ký </a>
-                </button>
-                <button type="submit" name="form-submit" class="form-submit"><a href="Htmlpr.html"> Hủy</button>
-            </div>
-            <div class="form-fg">
-                <ul class="form-facebook">
-                    <a href="https://" class="faebook-link">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                </ul>
-                <ul class="form-google">
-                    <a href="https://" class="google-link">
-                        <i class="fa-brands fa-google">
-                            <google-link></google-link>
-                        </i>
-                    </a>
-                </ul>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/style/style.css" />
+    <!-- font roboto -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- from login -->
+    <div class="login">
+      <div class="login__container">
+        <h1>Đăng Nhập</h1>
+        <form>
+          <h5>Email</h5>
+          <input type="text" class="input-login-username" />
+          <h5>Password</h5>
+          <input type="password" class="input-login-password" />
+          <button type="submit" class="login__signInButton">Đăng Nhập</button>
         </form>
+        <a href="/html/register.html" class="login__registerButton"
+          >Tạo tài khoản mới</a
+        >
+      </div>
     </div>
-
-    <script src="/login.js"></script>
-</body>
-
+  </body>
+  <script src="/js/main.js"></script>
 </html>
