--- a/html/register.html
+++ b/html/register.html
@@ -1,62 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>register</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/register.css">
-</head>
-
-<body>
-    <div id="wrapper">
-
-        <form action="" id="form-login">
-
-            <h1 class="form-heading">Đăng kí mới </h1>
-            <div class="form-group">
-                <i class="far fa-user"></i>
-                <input type="text" id="username" class="form-input" placeholder="Tên đăng nhập">
-            </div>
-            <div class="form-group">
-                <i class="fas fa-key"></i>
-                <input type="password" id="password" class="form-input" placeholder="Mật khẩu">
-                <div id="eye">
-                    <i class="far fa-eye"></i>
-                </div>
-            </div>
-            <div class="form-group">
-                <i class="fas fa-key"></i>
-                <input type="password" id="password" class="form-input" placeholder="Nhập lại mật khẩu ">
-                <div id="eye">
-                    <i class="far fa-eye"></i>
-                </div>
-            </div>
-            <div class="form-register">
-                <button type="submit" name="form-submit" class="form-submit"><a href="login.html">Đăng nhập </button>
-                <button type="submit" name="form-submit" class="form-submit"><a href ="register.html">Đăng ký </button>
-                <button type="submit" name="form-submit" class="form-submit"><a href="Htmlpr.html"> Hủy</button>
-            </div>
-            <div class="form-fg">
-                <ul class="form-facebook">
-                    <a href="https://www.facebook.com/" class="faebook-link">
-                        <i class="fa-brands fa-facebook"></i>
-                    </a>
-                </ul>
-                <ul class="form-google">
-                    <a href="https://www.facebook.com/" class="google-link">
-                        <i class="fa-brands fa-google">
-                            <google-link></google-link>
-                        </i>
-                    </a>
-                </ul>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/style/style.css" />
+    <!-- font roboto -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- form signup -->
+    <div class="signup">
+      <div class="signup__container">
+        <h1>Đăng Ký</h1>
+        <form action="">
+          <h5>Email</h5>
+          <input type="text" class="input-signup-username" />
+          <h5>Password</h5>
+          <input type="password" class="input-signup-password" />
+          <button type="submit" class="signup__signInButton">Đăng Ký</button>
         </form>
+        <a href="./login.html" class="signup__registerButton"
+          >Tạo tài khoản mới</a
+        >
+      </div>
     </div>
-    <script src="#"></script>
-
-</body>
-
+  </body>
+  <script src="/js/signup.js"></script>
 </html>
