--- a/html/Xemthemnhieutruyen.html
+++ b/html/Xemthemnhieutruyen.html
@@ -44,7 +44,7 @@
       <div class="narbar--menu">
         <div class="narbar--menuright">
           <div class="img">
-            <a href="./Htmlpr.html"
+            <a href="./index.html"
               ><img
                 src="https://st.truyenqqpro.com/template/frontend/images/logo.png"
                 alt="logo"
@@ -88,7 +88,7 @@
     <div id="narbar--option__parent">
       <div id="narbar--option">
         <div class="narbar--option1 home--page">
-          <a href="Htmlpr.html">Trang Chủ</a>
+          <a href="index.html">Trang Chủ</a>
           <button
             id="narbar--hide__option"
             class="narbar--hide__option narbar--hide--true__option"
