--- a/html/Tim-kiem-nang-cao.html
+++ b/html/Tim-kiem-nang-cao.html
@@ -30,7 +30,7 @@
                 <div class="narbar--menu">
                     <div class="narbar--menuright">
                         <div class="img">
-                            <a href="./index.html"><img src="https://st.truyenqqpro.com/template/frontend/images/logo.png" alt="logo"
+                            <a href="/index.html"><img src="https://st.truyenqqpro.com/template/frontend/images/logo.png" alt="logo"
                                     class="img1"></a>
                         </div>
                         <div id="narbar--menu__light" onclick="load__light()">
@@ -57,7 +57,7 @@
         <div id="narbar--option__parent">
                 <div id="narbar--option">
                     <div class="narbar--option1 home--page">
-                        <a href="index.html">Trang Chủ</a>
+                        <a href="/index.html">Trang Chủ</a>
                         <button id="narbar--hide__option" class="narbar--hide__option narbar--hide--true__option"></button>
                     </div>
                     <div id="narbar__option--hide">
