--- a/html/anime.html
+++ b/html/anime.html
@@ -32,7 +32,7 @@
     <div class="narbar--menu" style="margin-left: 10%">
       <div class="narbar--menuright">
         <div class="img">
-          <a href="./index.html"
+          <a href="/index.html"
             ><img
               src="https://st.truyenqqpro.com/template/frontend/images/logo.png"
               alt="logo"
@@ -72,7 +72,7 @@
     <div id="narbar--option__parent">
       <div id="narbar--option">
         <div class="narbar--option1 home--page">
-          <a href="index.html">Trang Chủ</a>
+          <a href="/index.html">Trang Chủ</a>
           <button
             id="narbar--hide__option"
             class="narbar--hide__option narbar--hide--true__option"
