--- a/html/onepice.html
+++ b/html/onepice.html
@@ -55,7 +55,7 @@
     <div id="narbar--option__parent">
         <div id="narbar--option">
             <div class="narbar--option1 home--page">
-                <a href="index.html">Trang Chủ</a>
+                <a href="/index.html">Trang Chủ</a>
                 <button id="narbar--hide__option" class="narbar--hide__option narbar--hide--true__option"></button>
             </div>
             <div id="narbar__option--hide">
