--- a/html/hocvienanhhung.html
+++ b/html/hocvienanhhung.html
@@ -28,7 +28,7 @@
         <div class="narbar--menu">
             <div class="narbar--menuright">
                 <div class="img">
-                    <a href="./index.html"><img src="https://st.truyenqqpro.com/template/frontend/images/logo.png" alt="logo"
+                    <a href="/index.html"><img src="https://st.truyenqqpro.com/template/frontend/images/logo.png" alt="logo"
                             class="img1"></a>
                 </div>
                 <div id="narbar--menu__light" onclick="load__light()">
