--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
       rel="shortcut icon"
       href="https://st.truyenqqpro.com/template/frontend/images/logo-icon.png"
     />
-    <link rel="stylesheet" href="../css/Prcss.css" />
+    <link rel="stylesheet" href="./css/Prcss.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
-    <link rel="stylesheet" href="../css/Tim_Truyen.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-    <link rel="stylesheet" href="../css/responsive.css" />
-    <link rel="stylesheet" href="../css/anime.css" />
-    <link rel="stylesheet" href="Xemthemnhieutruyen.html" />
-    <link rel="stylesheet" href="../css/register.css" />
-    <link rel="stylesheet" href="../css/caroucel.css" />
+    <link rel="stylesheet" href="./css/Tim_Truyen.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
+    <link rel="stylesheet" href="./css/anime.css" />
+    <link rel="stylesheet" href="html/Xemthemnhieutruyen.html" />
+    <link rel="stylesheet" href="./css/register.css" />
+    <link rel="stylesheet" href="./css/caroucel.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
@@ -44,7 +44,7 @@
       <div class="narbar--menu">
         <div class="narbar--menuright">
           <div class="img">
-            <a href="./Htmlpr.html"
+            <a href="/index.html"
               ><img
                 src="https://st.truyenqqpro.com/template/frontend/images/logo.png"
                 alt="logo"
@@ -75,10 +75,10 @@
         </div>
 
         <div class="narbar--menuleft">
-          <a href="register.html"
+          <a href="/html/register.html"
             ><button class="narbar--menuleft__Dk">Đăng kí</button></a
           >
-          <a href="login.html"
+          <a href="/html/login.html"
             ><button class="narbar--menuleft__Dn">Đăng nhập</button></a
           >
         </div>
