--- a/html/Tim-kiem-nang-cao.html
+++ b/html/Tim-kiem-nang-cao.html
@@ -13,9 +13,9 @@
       referrerpolicy="no-referrer"
     />
     <link rel="shortcut icon" href="https://st.truyenqqpro.com/template/frontend/images/logo-icon.png">
-    <link rel="stylesheet" href="../css/Prcss.css">
-    <link rel="stylesheet" href="../css/Tim-kiem-nang-cao.css">
-    <link rel="stylesheet" href="../css/Tim_Truyen.css">
+    <link rel="stylesheet" href="./css/Prcss.css">
+    <link rel="stylesheet" href="./css/Tim-kiem-nang-cao.css">
+    <link rel="stylesheet" href="./css/Tim_Truyen.css">
     
     <link
       rel="stylesheet"
