--- a/html/onepice.html
+++ b/html/onepice.html
@@ -10,16 +10,16 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="shortcut icon" href="https://st.truyenqqpro.com/template/frontend/images/logo-icon.png">
-        <link rel="stylesheet" href="../css/Prcss.css">
+        <link rel="stylesheet" href="./css/Prcss.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-        <link rel="stylesheet" href="../css/Tim_Truyen.css">
-        <link rel="stylesheet" href="../css/login.css">
-        <link rel="stylesheet" href="../css/responsive.css">
-        <link rel="stylesheet" href="../css/anime.css">
-        <link rel="stylesheet" href="../css/register.css">
-        <link rel="stylesheet" href="../css/caroucel.css">
-        <link rel="stylesheet" href="../css/hocvien.css">
-        <link rel="stylesheet" href="../css/reponhocvien.css">
+        <link rel="stylesheet" href="./css/Tim_Truyen.css">
+        <link rel="stylesheet" href="./css/login.css">
+        <link rel="stylesheet" href="./css/responsive.css">
+        <link rel="stylesheet" href="./css/anime.css">
+        <link rel="stylesheet" href="./css/register.css">
+        <link rel="stylesheet" href="./css/caroucel.css">
+        <link rel="stylesheet" href="./css/hocvien.css">
+        <link rel="stylesheet" href="./css/reponhocvien.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
 <body onclick="hidesearch()" onresize="responsive()" onload="responsive()" onclick="hidesearch()">
