--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div id="narbar--option__parent">
       <div id="narbar--option">
         <div class="narbar--option1 home--page">
-          <a href="Htmlpr.html">Trang Chủ</a>
+          <a href="index.html">Trang Chủ</a>
           <button
             id="narbar--hide__option"
             class="narbar--hide__option narbar--hide--true__option"
@@ -498,10 +498,10 @@
         </div>
       </div>
     </div>
-    <script src="../js/comics.js"></script>
-    <script src="../js/Tim_Truyen.js"></script>
-    <script src="../js/Pr.js"></script>
-    <script src="../js/caroucel.js"></script>
+    <script src="/js/comics.js"></script>
+    <script src="/js/Tim_Truyen.js"></script>
+    <script src="/js/Pr.js"></script>
+    <script src="/js/caroucel.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
 </html>
