--- a/html/Tim-kiem-nang-cao.html
+++ b/html/Tim-kiem-nang-cao.html
@@ -379,9 +379,9 @@
     <div class="clear"></div>
 
 
-    <script src="../js/comics.js"></script>
-    <script src="../js/Tim_Truyen.js"></script>
-    <script src="../js/Tim-kiem-nang-cao.js"></script>
-    <script src="../js/Pr.js"></script>
+    <script src="js/comics.js"></script>
+    <script src="js/Tim_Truyen.js"></script>
+    <script src="js/Tim-kiem-nang-cao.js"></script>
+    <script src="js/Pr.js"></script>
 </body>
 </html>
