--- a/html/Xemthemnhieutruyen.html
+++ b/html/Xemthemnhieutruyen.html
@@ -16,18 +16,18 @@
       rel="shortcut icon"
       href="https://st.truyenqqpro.com/template/frontend/images/logo-icon.png"
     />
-    <link rel="stylesheet" href="../css/Prcss.css" />
+    <link rel="stylesheet" href="css/Prcss.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
-    <link rel="stylesheet" href="../css/Tim_Truyen.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-    <link rel="stylesheet" href="../css/rspXtnt.css" />
-    <link rel="stylesheet" href="../css/anime.css" />
-    <link rel="stylesheet" href="../css/register.css" />
-    <link rel="stylesheet" href="../css/caroucel.css" />
-    <link rel="stylesheet" href="../css/Xemthemnhieutruyen.css" />
+    <link rel="stylesheet" href="css/Tim_Truyen.css" />
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="css/rspXtnt.css" />
+    <link rel="stylesheet" href="css/anime.css" />
+    <link rel="stylesheet" href="css/register.css" />
+    <link rel="stylesheet" href="css/caroucel.css" />
+    <link rel="stylesheet" href="css/Xemthemnhieutruyen.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
@@ -299,7 +299,7 @@
         >
       </div>
       <div class="ContentNew1">
-        <a href="../html/hocvienanhhung.html">
+        <a href="html/hocvienanhhung.html">
           <img
             src="https://i.truyenvua.xyz/ebook/190x247/boku-no-hero-academia_1552459650.jpg?gf=hdfgdfg&mobile=2"
             alt="Otonari No Tenshi-Sama Ni Itsunomanika Dame Ningen Ni Sareteita Ken"
@@ -981,10 +981,10 @@
         </div>
       </div>
     </div>
-    <script src="../js/comics.js"></script>
-    <script src="../js/Tim_Truyen.js"></script>
-    <script src="../js/Pr.js"></script>
-    <script src="../js/caroucel.js"></script>
+    <script src="js/comics.js"></script>
+    <script src="js/Tim_Truyen.js"></script>
+    <script src="js/Pr.js"></script>
+    <script src="js/caroucel.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
 </html>
