--- a/html/flot1.html
+++ b/html/flot1.html
@@ -12,18 +12,18 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../css/Prcss.css" />
+    <link rel="stylesheet" href="css/Prcss.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
-    <link rel="stylesheet" href="../css/Tim_Truyen.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-    <link rel="stylesheet" href="../css/responsive.css" />
-    <link rel="stylesheet" href="../css/anime.css" />
-    <link rel="stylesheet" href="../css/register.css" />
-    <link rel="stylesheet" href="../css/caroucel.css" />
-    <link rel="stylesheet" href="../css/flot1.css" />
+    <link rel="stylesheet" href="css/Tim_Truyen.css" />
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/anime.css" />
+    <link rel="stylesheet" href="css/register.css" />
+    <link rel="stylesheet" href="css/caroucel.css" />
+    <link rel="stylesheet" href="css/flot1.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
@@ -40,7 +40,7 @@
       <div class="narbar--menu">
         <div class="narbar--menuright">
           <div class="img">
-            <a href="/index.html"
+            <a href="index.html"
               ><img
                 src="https://st.truyenqqpro.com/template/frontend/images/logo.png"
                 alt="logo"
@@ -107,7 +107,7 @@
                 <div><a href="#">Shoujo</a></div>
                 <div><a href="#">Seinen</a></div>
                 <div><a href="#">Trọng Sinh</a></div>
-                <div><a href="../html/anime.html">Anime</a></div>
+                <div><a href="html/anime.html">Anime</a></div>
                 <div><a href="#">Drama</a></div>
                 <div><a href="#">Josei</a></div>
                 <div><a href="#">Ngôn Tình</a></div>
@@ -444,10 +444,10 @@
       </div>
     </div>
 
-    <script src="../js/comics.js"></script>
-    <script src="../js/Tim_Truyen.js"></script>
-    <script src="../js/Pr.js"></script>
-    <script src="../js/caroucel.js"></script>
+    <script src="js/comics.js"></script>
+    <script src="js/Tim_Truyen.js"></script>
+    <script src="js/Pr.js"></script>
+    <script src="js/caroucel.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
   </body>
 </html>
