--- a/html/hocvienanhhung.html
+++ b/html/hocvienanhhung.html
@@ -10,15 +10,15 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="shortcut icon" href="https://st.truyenqqpro.com/template/frontend/images/logo-icon.png">
-        <link rel="stylesheet" href="../css/Prcss.css">
+        <link rel="stylesheet" href="css/Prcss.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-        <link rel="stylesheet" href="../css/Tim_Truyen.css">
-        <link rel="stylesheet" href="../css/login.css">
-        <link rel="stylesheet" href="../css/responsive.css">
-        <link rel="stylesheet" href="../css/anime.css">
-        <link rel="stylesheet" href="../css/register.css">
-        <link rel="stylesheet" href="../css/caroucel.css">
-        <link rel="stylesheet" href="../css/hocvien.css">
+        <link rel="stylesheet" href="css/Tim_Truyen.css">
+        <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="css/anime.css">
+        <link rel="stylesheet" href="css/register.css">
+        <link rel="stylesheet" href="css/caroucel.css">
+        <link rel="stylesheet" href="css/hocvien.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
    
 </head>
@@ -56,7 +56,7 @@
     <div id="narbar--option__parent">
         <div id="narbar--option">
             <div class="narbar--option1 home--page">
-                <a href="../html/index.html">Trang Chủ</a>
+                <a href="html/index.html">Trang Chủ</a>
                 <button id="narbar--hide__option" class="narbar--hide__option narbar--hide--true__option"></button>
             </div>
             <div id="narbar__option--hide">
@@ -373,10 +373,10 @@
         </div>
     </div>
 
-    <script src="../js/comics.js"></script>
-    <script src="../js/Tim_Truyen.js"></script>
-    <script src="../js/Pr.js"></script>
-    <script src="../js/caroucel.js"></script>
+    <script src="js/comics.js"></script>
+    <script src="js/Tim_Truyen.js"></script>
+    <script src="js/Pr.js"></script>
+    <script src="js/caroucel.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>>
    
 </body>
