--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
-    <link rel="stylesheet" href="./css/Tim_Truyen.css" />
-    <link rel="stylesheet" href="./css/login.css" />
-    <link rel="stylesheet" href="./css/responsive.css" />
-    <link rel="stylesheet" href="./css/anime.css" />
+    <link rel="stylesheet" href="css/Tim_Truyen.css" />
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/anime.css" />
     <link rel="stylesheet" href="html/Xemthemnhieutruyen.html" />
-    <link rel="stylesheet" href="./css/register.css" />
-    <link rel="stylesheet" href="./css/caroucel.css" />
+    <link rel="stylesheet" href="css/register.css" />
+    <link rel="stylesheet" href="css/caroucel.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
@@ -44,7 +44,7 @@
       <div class="narbar--menu">
         <div class="narbar--menuright">
           <div class="img">
-            <a href="/index.html"
+            <a href="index.html"
               ><img
                 src="https://st.truyenqqpro.com/template/frontend/images/logo.png"
                 alt="logo"
@@ -75,10 +75,10 @@
         </div>
 
         <div class="narbar--menuleft">
-          <a href="/html/register.html"
+          <a href="html/register.html"
             ><button class="narbar--menuleft__Dk">Đăng kí</button></a
           >
-          <a href="/html/login.html"
+          <a href="html/login.html"
             ><button class="narbar--menuleft__Dn">Đăng nhập</button></a
           >
         </div>
@@ -96,7 +96,7 @@
         </div>
         <div id="narbar__option--hide">
           <div class="narbar--option1">
-            <a href="anime.html">Thể Loại</a>
+            <a href="html/anime.html">Thể Loại</a>
             <div class="narbar--option1--submenu">
               <div class="narbar--option1--submenu--wrapper">
                 <div><a href="#">Action</a></div>
@@ -111,7 +111,7 @@
                 <div><a href="#">Shoujo</a></div>
                 <div><a href="#">Seinen</a></div>
                 <div><a href="#">Trọng Sinh</a></div>
-                <div><a href="anime.html">Anime</a></div>
+                <div><a href="html/anime.html">Anime</a></div>
                 <div><a href="#">Drama</a></div>
                 <div><a href="#">Josei</a></div>
                 <div><a href="#">Ngôn Tình</a></div>
@@ -160,7 +160,7 @@
           <div class="narbar--option1"><a href="#">Con Gái</a></div>
           <div class="narbar--option1"><a href="#">Con Trai</a></div>
           <div class="narbar--option1">
-            <a href="./Tim-kiem-nang-cao.html">Tìm Truyện</a>
+            <a href="html/Tim-kiem-nang-cao.html">Tìm Truyện</a>
           </div>
           <div class="narbar--option1"><a href="#">Lịch Sử</a></div>
           <div class="narbar--option1"><a href="#">Theo Dõi</a></div>
