--- a/html/onepice.html
+++ b/html/onepice.html
@@ -372,10 +372,10 @@
             </div>
         </div>
     </div>
-    <script src="../js/comics.js"></script>
-    <script src="../js/Tim_Truyen.js"></script>
-    <script src="../js/Pr.js"></script>
-    <script src="../js/caroucel.js"></script>
+    <script src="js/comics.js"></script>
+    <script src="js/Tim_Truyen.js"></script>
+    <script src="js/Pr.js"></script>
+    <script src="js/caroucel.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
    
 </body>
